# scBONITA

./: .gitignore  LICENSE  README.md  classDefinitions.py  compareSubpops_scBonita.py  keggParser.py  make_test_data.py  makefile  pathwayAnalysis.py  pipeline.py  pyproject.toml  ruleMaker.py  scBONITA_setup.sh  scBonita.yml  setup.cfg  simulator.c  simulator_current.c  singleCell.py  spec-file.txt  testData.py
HIVAS_dataset_preliminary_analysis/: HIVAS_participants_clinical_covariates.csv  HIV_AS_dataset_analysis.rmd  README.md  all_markers.csv  cluster_0_ASmarkers.csv  cluster_10_ASmarkers.csv  cluster_11_ASmarkers.csv  cluster_12_ASmarkers.csv  cluster_13_ASmarkers.csv  cluster_14_ASmarkers.csv  cluster_15_ASmarkers.csv  cluster_1_ASmarkers.csv  cluster_2_ASmarkers.csv  cluster_3_ASmarkers.csv  cluster_4_ASmarkers.csv  cluster_5_ASmarkers.csv  cluster_6_ASmarkers.csv  cluster_7_ASmarkers.csv  cluster_8_ASmarkers.csv  cluster_9_ASmarkers.csv  enrichment_ASposvsASneg_by_subpopulation.xlsx  graphs_to_gmt_scBonita.gmt  kegg_ora_cluster11.csv  kegg_ora_cluster14.csv
Tutorials/: Attractor_Analysis_With_scBONITA.ipynb  Pathway_Analysis_With_scBONITA.ipynb  Rule_Inference_With_ScBONITA.ipynb
Tutorials/Attractor_Analysis_With_scBONITA/: Attractor_Analysis_With_scBONITA.md  output.docx
Tutorials/Example SBATCH scripts/: runSubpops.sh  run_incomplete_experiments.sh  run_pathway_analysis.sh  scBONITA_setup_example.sh  scBonita_setup.sh  scBonita_single_network_setup.sh
Tutorials/Pathway_Analysis_With_scBONITA/: Pathway_Analysis_With_scBONITA.md  (+1 more)
tests/: tests.py
(+63 files in other folders)
