[metadata]
name = scBonita
version = 0.0.1
author = Mukta G. Palshikar
author_email = mukta_palshikar@urmc.rochester.edu
description = Boolean rule inference and simulation-based pathway analysis using single-cell RNA-seq data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mgp13/scBonita
project_urls =
    Bug Tracker = https://github.com/mgp13/scBonita/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    setuptools>=57.4.0
    wheel>=0.37.0
    pandas >= 1.1
    beautifulsoup4 >= 4
    requests >= 2
    bioservices >= 1.7
    numpy >= 1.19
    scipy >= 1.5
    pandas >= 1.1
    pyproj >= 3
    rtree >= 0.9
    matplotlib >= 3
    seaborn >= 0.11
    networkx >= 2.4
    umap
    kmodes
    sklearn
    deap
    scikit-learn
    requests
    statsmodels
    pyclustering
    upsetplot
    yapf
    gseapy

[options.packages.find]
where = src